--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -19,6 +19,11 @@
     <%= f.label :content %><br />
     <%= f.text_area :content %>
   </div>
+
+  <%= f.fields_for :comments do |comment_form| %>
+    <%= comment_form.text_area :content  %>
+  <% end %>
+
   <div class="actions">
     <%= f.submit %>
   </div>
