--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -10,6 +10,10 @@
   <%= @post.content %>
 </p>
 
+<ul>
+  <%= render @post.comments %>
+</ul>
+
 
 <%= link_to 'Edit', edit_post_path(@post) %> |
 <%= link_to 'Back', posts_path %>
